// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-ApiEndpoints correctly 1`] = `
<section
  className="mb-5 list-regular"
  name="Test"
>
  <div
    className="row"
  >
    <div
      className="col-5 pl-0"
    >
      <h3
        className=""
      >
        Operation
      </h3>
    </div>
    <div
      className="col-7"
    >
      <h3
        className=""
      >
        Description
      </h3>
    </div>
  </div>
  <React.Fragment
    key="get-/catalogs"
  >
    <div
      className="row list-regular--item"
    >
      <div
        className="col-5 pl-0 fdk-text-strong"
      >
        GET
         
        /catalogs
      </div>
      <div
        className="col-7"
      >
        The three formats are: text/turtle, application/ld+json and application/rdf+xml
      </div>
    </div>
  </React.Fragment>
</section>
`;

exports[`should render api-ApiEndpoints correctly with no props 1`] = `
<section
  className="mb-5 list-regular"
  name={null}
>
  <div
    className="row"
  >
    <div
      className="col-5 pl-0"
    >
      <h3
        className=""
      >
        Operation
      </h3>
    </div>
    <div
      className="col-7"
    >
      <h3
        className=""
      >
        Description
      </h3>
    </div>
  </div>
</section>
`;
